Fixing alignment again

--- a/docs/style.css
+++ b/docs/style.css
@@ -1,8 +1,4 @@
 .c {
-  text-align: left;
-}
-
-.cc {
   text-align: center;
 }
 
